# fulcrum

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HARDENING-BACKLOG.md  LICENSE-APACHE  Makefile  README.md  aa_cont.sh  aa_stop.sh  mmB2_amd_aa.spec.json  parse_aa.py  scope.json  scope_verdict.json
.cursor/rules/: fulcrum.md
.github/workflows/: publish.yml
artifacts/m1-insnattr/2026-06-30/: CLOSED_differential_gz_minus_libdeflate_silesia_m1.json  insnattr_silesia_T1.json  insnattr_silesia_T1_ldtop.json
critpath-libdeflate/: Cargo.toml  build.rs
critpath-libdeflate/artifacts/: critpath_DIFFERENTIAL_silesia_m1.json  critpath_gz_silesia_m1.json  critpath_libdeflate_silesia_m1.json  perphase_fastloop_DIFFERENTIAL_silesia_m1.json
critpath-libdeflate/artifacts/kpcphase/: kpcphase_gz_vs_ld_silesia_m1.json
critpath-libdeflate/csrc/: cpld_markers.c  cpld_markers.h  cpld_prefix.h
critpath-libdeflate/csrc/libdeflate/lib/: decompress_template.h  deflate_decompress.c
critpath-libdeflate/examples/: decode_stdout.rs  perphase_fastloop_differential.py
critpath-libdeflate/src/: lib.rs
decide/: README.md  pyproject.toml
decide/docs/: MISSING.md  SCHEMA.md
decide/fulcrum/: __init__.py  cli.py
decide/fulcrum/adapters/: base.py  gzippy.py
decide/fulcrum/core/: binloc.py  cell.py  cycles.py  decide.py  fingerprint.py  insn.py  invariants.py  ledger.py  locate.py  perturb.py  pipeline.py  provenance.py  quantity.py  report.py  trace.py
decide/fulcrum/selftests/: __init__.py  test_adapter.py  test_cell_roundtrip.py  test_cycles.py  test_decide.py  test_insn.py  test_insn_calib.py  test_invariants.py  test_locate.py  test_perturb.py  test_pipeline.py  test_provenance.py  test_quantity.py  test_runner.py  test_total.py
docs/: SCHEMA.md  frontier-design.md  scoreboard-design.md  x86-gate-battery.md
examples/: compare.example.json  first-run-baseline.spec.json  first-run-smoke.spec.json  optimality_manifest.template.json  profile.example.json  toy_pipeline.rs
scripts/: rapidgzip_memlife.py  scope-run.sh
src/: abmeasure.rs  alloc.rs  audit.rs  behavior.rs  binloc.rs  bisect.rs  bundle.rs  causal.rs  cellwhy.rs  chainlat.rs  classhist.rs  comparability.rs  compare.rs  compare_cli.rs  config.rs  conserve.rs  consumer.rs  counterdiff.rs  coz.rs  coz_jsonl.rs  cpreflight.rs  critpath.rs  cycles.rs  decide.rs  decompose.rs  dispatchgap.rs  estimate.rs  excess.rs  finding.rs  fingerprint.rs  flow.rs  freeze.rs  frontier.rs  frontier_drive.rs  frontier_selftest.rs  frontier_tests.rs  gate.rs  insn.rs  insn_attr.rs  invariants.rs  (+47 more)
src/abmeasure/: tests.rs
src/anatomy/: exec.rs  mod.rs  selftest.rs
src/counterdiff/: tests.rs
src/cycles/: tests.rs
src/decide/: tests.rs
src/excess/: tests.rs
src/insn/: tests.rs
src/ledger/: tests.rs
src/locate/: tests.rs
src/optgate/: tests.rs
src/perturb/: tests.rs
src/pipeline/: tests.rs
src/quantity/: tests.rs
src/ratio/: diff.rs  encode.rs  finder_model.rs  fixtures_gz.rs  inflate.rs  matchfinder.rs  mod.rs  selftest.rs  squeeze.rs
src/scaling_matrix/: tests.rs
src/scoreboard/: tests.rs
tests/: analyzer.rs  audit_false_confidence.rs  comparability_gate.rs  estimator_postdiction.rs  fair_compare.rs  finding_store.rs  incremental_store.rs  optimality_selfcal.rs  region_hw.rs  run_dryrun_oracle.rs  seam_subcommands.rs  views.rs
tests/fixtures/: optimality_logs_t1_gz.script
tools/: memtrace.c
